--- a/ProgTest/Views/Home/Index.cshtml
+++ b/ProgTest/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <style>
         body {
-            background-color: #f4f4f9;
+            background-color: #grey;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
