changed button name

--- a/ProgTest/Views/Lecturers/Create.cshtml
+++ b/ProgTest/Views/Lecturers/Create.cshtml
@@ -24,7 +24,7 @@
 
                 <div class="form-group">
                     <label asp-for="Email" class="control-label font-weight-bold"></label>
-                    <input asp-for="Email" class="form-control" placeholder="Enter email" /> <!-- Added placeholder -->
+                    <input asp-for="Email" class="form-control" placeholder="Enter Email" /> <!-- Added placeholder -->
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
 
