changed delete button

--- a/ProgTest/Views/Lecturers/Delete.cshtml
+++ b/ProgTest/Views/Lecturers/Delete.cshtml
@@ -8,7 +8,7 @@
     <!-- Centered container for better layout -->
     <h1 class="my-4 text-center">Delete Lecturer</h1> <!-- Centered title -->
 
-    <h3 class="text-danger text-center">Are you sure you want to delete this?</h3> <!-- Highlighted confirmation -->
+    <h3 class="text-danger text-center">Are you sure you want to delete?</h3> <!-- Highlighted confirmation -->
 
     <div class="card">
         <!-- Added a card for visual separation -->
